# MultiAgentResearch

./: .gitignore  README.md  pyproject.toml
examples/: run_research.py
src/multi_agent_research/: __init__.py  agent.py  brave.py  gemini.py
tests/: test_agent.py
